fix: overflow, app width

--- a/layouts/Footer/Footer.scss
+++ b/layouts/Footer/Footer.scss
@@ -12,7 +12,7 @@
       }
 
       .footer-head-text {
-        @apply z-30 flex items-center justify-center px-[50px] md:px-[242px] pt-6 md:pt-[72px] pb-4 md:pb-[50px];
+        @apply z-30 flex items-center justify-center px-[80px] md:px-[242px] pt-6 md:pt-[72px] pb-4 md:pb-[50px];
 
         h2 {
           @apply z-30 text-white mx-auto text-center;
