--- a/layouts/Wrapper/Wrapper.scss
+++ b/layouts/Wrapper/Wrapper.scss
@@ -3,4 +3,7 @@
 @import 'tailwindcss/utilities';
 
 @layer components {
+  .app__wrap {
+    @apply w-full mx-auto flex flex-col items-center justify-center overflow-hidden;
+  }
 }
