--- a/styles/Home.scss
+++ b/styles/Home.scss
@@ -24,7 +24,7 @@
   }
 
   .app__wrapper {
-    @apply flex-1 w-full flex-col py-2 px-4 big:pt-32;
+    @apply flex-1 w-full flex-col py-2 px-4 large:pt-32;
   }
 
   .copyright {
